// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <div
    class="inputAvatar"
  >
    <div
      class="preview"
    >
      <div
        class="avatar large isDark"
      >
        <svg
          class="Z6OfUI2sH34- xZ6Jnv-7uXc-"
          data-testid="person"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="TpLksR41OM0- yAELOSHgxqc-"
            d="M12 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8Zm0-2a2 2 0 1 1 0-4 2 2 0 0 1 0 4ZM5.29 19h13.42a7.004 7.004 0 0 0-13.42 0Zm-2.245.016C3.949 15 7.711 12 12 12s8.054 3 8.957 7.016a1.567 1.567 0 0 1 .022.574c-.124.807-.901 1.41-1.802 1.41H4.825c-.914 0-1.701-.622-1.807-1.447a1.543 1.543 0 0 1 .027-.537Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropZoneBase"
      role="button"
      tabindex="-1"
    >
      <input
        accept="image/*"
        autocomplete="off"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <button
        class="button small work secondary fullWidth"
        type="button"
      >
        <span
          class="base extraBold small base"
        >
          Upload Image
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders with a provided image 1`] = `
<div>
  <div
    class="inputAvatar"
  >
    <div
      class="preview"
    >
      <div
        class="avatar large isDark"
        role="img"
        style="background-image: url(https://api.adorable.io/avatars/150/jobbler);"
      />
    </div>
    <div
      class="dropZoneBase"
      role="button"
      tabindex="-1"
    >
      <input
        accept="image/*"
        autocomplete="off"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <button
        class="button small work secondary fullWidth"
        type="button"
      >
        <span
          class="base extraBold small base"
        >
          Change Image
        </span>
      </button>
    </div>
    <button
      class="button small destructive secondary"
      type="button"
    >
      <span
        class="base extraBold small base"
      >
        Remove
      </span>
    </button>
  </div>
</div>
`;
